# vulpini

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/vulpini-cli/: Cargo.toml
crates/vulpini-cli/src/: main.rs
crates/vulpini-core/: Cargo.toml
crates/vulpini-core/src/: config.rs  delay.rs  engine.rs  geo.rs  lib.rs  logbus.rs  relay.rs  stats.rs
crates/vulpini-core/src/common/: addr.rs  error.rs  mod.rs  session.rs  stream.rs
crates/vulpini-core/src/inbound/: http.rs  mod.rs  socks5.rs
crates/vulpini-core/src/node/: mod.rs  model.rs
crates/vulpini-core/src/node/link/: mod.rs  ss.rs  trojan.rs  vless.rs  vmess.rs
crates/vulpini-core/src/node/subscription/: clash.rs  mod.rs
crates/vulpini-core/src/outbound/: block.rs  direct.rs  mod.rs  selector.rs  trojan.rs  vless.rs
crates/vulpini-core/src/outbound/shadowsocks/: crypto.rs  mod.rs  stream.rs
crates/vulpini-core/src/router/: mod.rs  rule.rs
crates/vulpini-core/src/transport/: mod.rs  tls.rs  ws.rs
crates/vulpini-core/tests/: links.proptest-regressions  links.rs  router.rs  spine.rs  ss_fullstack.rs  subscription.rs  vless.rs
crates/vulpini-core/tests/corpus/: invalid_links.txt  share_links.txt
crates/vulpini-rules/: Cargo.toml  build.rs
crates/vulpini-rules/proto/: geo.proto
crates/vulpini-rules/src/: geoip.rs  geosite.rs  lib.rs
crates/vulpini-sysproxy/: Cargo.toml
crates/vulpini-sysproxy/src/: imp.rs  lib.rs
shared/: types.ts
vulpini/: Cargo.toml  vulpini.example.toml  vulpini.toml
vulpini-x/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
vulpini-x/electron/: preload.js
vulpini-x/electron/main/: index.js
vulpini-x/electron/renderer/: index.html
vulpini-x/electron/renderer/src/: App.css  App.css.d.ts  App.ts  App.tsx  styles.css  styles.css.d.ts
vulpini-x/src/: App.ts  App.tsx  api.ts  main.tsx  store.ts  styles.css
vulpini-x/src-tauri/: Cargo.toml  tauri.conf.json
vulpini-x/src-tauri/capabilities/: default.json
vulpini-x/src-tauri/icons/: icon.icns
vulpini-x/src-tauri/src/: commands.rs  lib.rs  main.rs
vulpini-x/src/components/: BasePage.tsx  DelayBadge.tsx  Dialog.tsx  SettingItem.tsx  Sidebar.tsx  Switch.tsx  TitleBar.tsx  TrafficWidget.tsx
vulpini-x/src/pages/: Home.tsx  Logs.tsx  Nodes.tsx  Rules.tsx  Settings.tsx  Subscriptions.tsx
vulpini-x/src/store/: delay.ts  theme.ts
vulpini-x/src/styles/: _mixins.scss  _tokens.scss  global.scss
vulpini/src/: lib.rs  main.rs
vulpini/src/anomaly_detector/: mod.rs
vulpini/src/api/: mod.rs
vulpini/src/behavior_monitor/: mod.rs
vulpini/src/config/: mod.rs
vulpini/src/ip_manager/: mod.rs
vulpini/src/logger/: mod.rs
vulpini/src/protocol/: http.rs  mod.rs  socks5.rs
vulpini/src/smart_router/: mod.rs
vulpini/src/traffic_analyzer/: mod.rs
vulpini/src/utils/: mod.rs
vulpini/tests/: anomaly_detector.rs  api.rs  behavior_monitor.rs  config.rs  ip_manager.rs  smart_router.rs  traffic_analyzer.rs
