[package]
name = "vulpini"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["zayoka"]

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
dashmap = "6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
thiserror = "2.0.18"
anyhow = "1.0.102"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
rand = "0.10"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
criterion = "0.8"
proptest = "1.10.0"
tempfile = "3.25.0"

[[bin]]
name = "vulpini"
path = "src/main.rs"

[lib]
name = "vulpini"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
