[package]
name = "vulpini-core"
description = "Self-contained proxy client core: inbounds, outbounds, router, nodes, stats"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
base64.workspace = true
percent-encoding.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha1.workspace = true
md-5.workspace = true
rand.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["io-std"] }
tempfile.workspace = true
proptest.workspace = true
shadowsocks = "1"
