[package]
name = "vulpini-core"
description = "Self-contained proxy client core: inbounds, outbounds, router, nodes, stats"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vulpini-rules = { path = "../vulpini-rules" }
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
uuid.workspace = true
base64.workspace = true
percent-encoding.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha1.workspace = true
md-5.workspace = true
rand.workspace = true
bytes.workspace = true
arc-swap.workspace = true
ipnet.workspace = true
reqwest.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
webpki-roots.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["io-std"] }
tempfile.workspace = true
proptest.workspace = true
shadowsocks = "1"
rcgen = "0.14"
