[package]
name = "vulpini-rules"
description = "geosite.dat / geoip.dat (v2ray format) parsing and matchers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
prost.workspace = true
thiserror.workspace = true
regex.workspace = true
aho-corasick.workspace = true
ip_network_table.workspace = true
ip_network.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
