[package]
name = "vulpini-sysproxy"
description = "Windows system proxy management (registry + WinINet refresh)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.60", features = ["Win32_Networking_WinInet"] }
